--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+body {
+  background-color: #e0f4d0;
+  padding: 45px 25px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-family: 'Indie Flower', cursive;
+}
+.formStyle {
+  margin-top: 30px;
+}
+.inputStyle{
+  padding: 7px 17px;
+  min-width: 200px;
+  max-width: 100vw;
+  font-size: 15px;
+}
+button{
+  font-family: 'Indie Flower', cursive;
+  border: none;
+  background: none;
+  outline: none;
+  font-size: 20px;
+}
+
+
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
