--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   max-width: 100vw;
   font-size: 15px;
   margin-left: 6px;
+  margin-top: 6px;
 }
 button{
   font-family: 'Indie Flower', cursive;
@@ -33,6 +34,23 @@ button{
   background-color: #04AA6D;
   color: #ffffff;
   border: none;
+  border-radius: 4px;
+  margin-top: 6px;
+}
+.navbar > * {
+  display: inline-block;
+  margin-left: 30px;
+}
+.navbar{
+  float: right;
+}
+.title{
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+.instructions{
+  margin-left: 7px;
 }
 
 
