--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ body {
   font-size: 15px;
   margin-left: 6px;
   margin-top: 6px;
+  border-radius: 4px;
+  border: none;
 }
 button{
   font-family: 'Indie Flower', cursive;
@@ -28,7 +30,7 @@ button{
   font-size: 20px;
 }
 .submitStyle{
-  padding: 9px 17px;
+  padding: 7px 17px;
   font-size: 15px;
   margin-left: 6px;
   background-color: #04AA6D;
@@ -52,9 +54,37 @@ button{
 .instructions{
   margin-left: 7px;
 }
-
-
-.App {
-  text-align: center;
+.imageGrid{
+  padding-top: 40px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
+.images {
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+.recipeLabels {
+  max-width: 200px;
+  text-align: center;
+  margin: 12px 0px;
+}
+.grid{
+  
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: baseline;
+  grid-column-gap: 200px;
+  grid-row-gap: 10px;
+}
+.graphIcon{
+  height: 20px;
+  width: 20px;
+  object-fit: cover;
+  border-radius: 4px;
+}
