--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 body {
-  background-color: #e0f4d0;
+  /* background-color: #e0f4d0; */
   padding: 45px 25px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   display: flex;
   font-family: 'Indie Flower', cursive;
+  font-size: 20px;
 }
 .formStyle {
   margin-top: 30px;
@@ -18,9 +19,10 @@ body {
   max-width: 100vw;
   font-size: 15px;
   margin-left: 6px;
-  margin-top: 6px;
+  margin-top: 0px;
   border-radius: 4px;
   border: none;
+  background-color: #e0f4d0;
 }
 button{
   font-family: 'Indie Flower', cursive;
@@ -53,6 +55,7 @@ button{
 }
 .instructions{
   margin-left: 7px;
+  /* margin-bottom: 0px; */
 }
 .imageGrid{
   padding-top: 40px;
@@ -60,7 +63,7 @@ button{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .images {
@@ -68,6 +71,7 @@ button{
   width: 200px;
   object-fit: cover;
   border-radius: 4px;
+  cursor: pointer;
 }
 .recipeLabels {
   max-width: 200px;
@@ -75,7 +79,6 @@ button{
   margin: 12px 0px;
 }
 .grid{
-  
   display: grid;
   grid-template-columns: auto auto auto;
   align-items: baseline;
@@ -87,4 +90,16 @@ button{
   width: 20px;
   object-fit: cover;
   border-radius: 4px;
+  
+}
+.icons > * {
+  display: inline-block;
+  margin-right: 70px;
+  cursor: pointer;
+  align-items: baseline;
+}
+.icons{
+  float: left;
+  padding-left: 0px;
+  align-items: baseline;
 }
