--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,14 @@ body {
   padding: 7px 17px;
   min-width: 200px;
   max-width: 100vw;
-  font-size: 15px;
+  font-size: 20px;
   margin-left: 6px;
   margin-top: 0px;
   border-radius: 4px;
   border: none;
   background-color: #e0f4d0;
+  font-family: 'Indie Flower', cursive;
+  font-weight: bold;
 }
 button{
   font-family: 'Indie Flower', cursive;
@@ -30,16 +32,19 @@ button{
   background: none;
   outline: none;
   font-size: 20px;
+  cursor: pointer;
 }
 .submitStyle{
   padding: 7px 17px;
-  font-size: 15px;
+  font-size: 20px;
   margin-left: 6px;
   background-color: #04AA6D;
   color: #ffffff;
   border: none;
   border-radius: 4px;
   margin-top: 6px;
+  font-family: 'Indie Flower', cursive;
+  cursor: pointer;
 }
 .navbar > * {
   display: inline-block;
@@ -55,6 +60,7 @@ button{
 }
 .instructions{
   margin-left: 7px;
+  font-size: 25px;
   /* margin-bottom: 0px; */
 }
 .imageGrid{
